fix: stretch background to world, instant flip snap, slow turtle to 22px/s

--- a/src/components/Scene/Scene.css
+++ b/src/components/Scene/Scene.css
@@ -14,8 +14,8 @@
   position: absolute;
   width: 4000px;
   height: 3000px;
-  background: url('/background.svg') repeat;
-  background-size: 100vw auto;
+  background: url('/background.svg') no-repeat center;
+  background-size: 100% 100%;
   will-change: transform;
 }
 
