--- a/src/components/Turtle/Turtle.css
+++ b/src/components/Turtle/Turtle.css
@@ -10,6 +10,11 @@
 .turtle-flip {
   width: 100%;
   height: 100%;
+}
+
+.turtle-tilt {
+  width: 100%;
+  height: 100%;
   transition: transform 0.8s ease;
 }
 
